--- a/AudioClassification.ipynb
+++ b/AudioClassification.ipynb
@@ -5,7 +5,7 @@
    "id": "187e3ad0-f1c6-4730-b735-15a34fae9c01",
    "metadata": {},
    "source": [
-    "1) Import and Install Dependencies "
+    "# 1) Import and Install Dependencies "
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "06db2924-4002-4564-b2a0-a143a3a0cd05",
    "metadata": {},
    "source": [
-    "1.1 Install Dependencies"
+    "### 1.1 Install Dependencies"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "id": "08324ad5-a537-4672-885c-a449cc910b80",
    "metadata": {},
    "source": [
-    "1.2 Load Dependencies"
+    "### 1.2 Load Dependencies"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "id": "622dc068-3bcb-410c-ad4e-5021c3476081",
    "metadata": {},
    "source": [
-    "2) Build Data Loading Function"
+    "# 2) Build Data Loading Function"
    ]
   },
   {
@@ -115,7 +115,64 @@
    "id": "d2374c24-4009-4796-8a10-18d0b0e74b9c",
    "metadata": {},
    "source": [
-    "2.1) Define paths to the file "
+    "### 2.1) Define paths to the file "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cd578864-672b-4214-a028-9ae22266e2a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CAPUCHIN_FILE = os.path.join('data', 'Parser_Capuchinbird_Clips', 'XC3776-3.wav')\n",
+    "NOT_CAPUCHIN_FILE = os.path.join('data', 'Parsed_Not_Capuchinbird_Clips', 'afternoon-birds-songs-in-forest-0.wav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "428d900a-d4f0-4fe3-af93-ce8664ed1cad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data/Parser_Capuchinbird_Clips/XC3776-3.wav'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CAPUCHIN_FILE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9560e45-1f4b-4596-8e0a-3ec79d5c4468",
+   "metadata": {},
+   "source": [
+    "###  2.2 Build Dataloading Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5d92a31-927c-4f25-9d50-5b55c9918531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_wav_16k_mono(filename):\n",
+    "    # Load encoded wav file\n",
+    "    file_contents = tf.io.read_file(filename)\n",
+    "    # Decode wav (tensors by channels)\n",
+    "    wav, sample_rate = tf.audio.decode_wav(file_contents, desired_channels = 1)\n",
+    "    # Removes trailing axis\n",
+    "    wav = tf.squeeze(wav, axis =-1)\n",
+    "    sample_rate = tf.cast(sample_rate, dtype = tf.int64)"
    ]
   }
  ],
